{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 14,
  "lineage": "512d13f0-e5b4-ec64-3299-2418c9c0b934",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "domainip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-040f5facd6569cda7",
            "association_id": "eipassoc-0a4b3409df5480952",
            "domain": "vpc",
            "id": "eipalloc-040f5facd6569cda7",
            "network_border_group": "us-west-1",
            "network_interface": "eni-08e1685b5b46a4791",
            "private_dns": "ip-10-0-1-213.us-west-1.compute.internal",
            "private_ip": "10.0.1.213",
            "public_dns": "ec2-54-219-223-22.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.223.22",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "domain_iwg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375566442973:internet-gateway/igw-0b39c7d19b76f5d60",
            "id": "igw-0b39c7d19b76f5d60",
            "owner_id": "375566442973",
            "vpc_id": "vpc-0982c78768ec747ee"
          },
          "dependencies": [
            "aws_vpc.domain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "domain_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-040f5facd6569cda7",
            "connectivity_type": "public",
            "id": "nat-01469cf2b5eb7221b",
            "network_interface_id": "eni-08e1685b5b46a4791",
            "private_ip": "10.0.1.213",
            "public_ip": "54.219.223.22",
            "subnet_id": "subnet-067d4b60cd45a2f6d"
          },
          "dependencies": [
            "aws_eip.domainip",
            "aws_subnet.domain_subnet",
            "aws_vpc.domain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "domin_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375566442973:route-table/rtb-09d82c2d1e9ff184f",
            "id": "rtb-09d82c2d1e9ff184f",
            "owner_id": "375566442973",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b39c7d19b76f5d60",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b39c7d19b76f5d60",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0982c78768ec747ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.domain_iwg",
            "aws_vpc.domain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "domin_route-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375566442973:route-table/rtb-09340c93508ca02fe",
            "id": "rtb-09340c93508ca02fe",
            "owner_id": "375566442973",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01469cf2b5eb7221b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": null,
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0b39c7d19b76f5d60",
                "instance_id": null,
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0982c78768ec747ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.domain_iwg",
            "aws_nat_gateway.domain_nat",
            "aws_vpc.domain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8e50afde557febf",
            "route_table_id": "rtb-09340c93508ca02fe",
            "subnet_id": "subnet-067d4b60cd45a2f6d"
          },
          "dependencies": [
            "aws_eip.domainip",
            "aws_internet_gateway.domain_iwg",
            "aws_nat_gateway.domain_nat",
            "aws_route_table.domin_route-private",
            "aws_subnet.domain_subnet",
            "aws_vpc.domain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bcd9b3b75031b7d",
            "route_table_id": "rtb-09d82c2d1e9ff184f",
            "subnet_id": "subnet-04ba9f11ecf559f93"
          },
          "dependencies": [
            "aws_route_table.domin_route",
            "aws_subnet.domain_pu_subnet",
            "aws_vpc.domain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "domain_pu_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375566442973:subnet/subnet-04ba9f11ecf559f93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ba9f11ecf559f93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "375566442973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0982c78768ec747ee"
          },
          "dependencies": [
            "aws_vpc.domain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "domain_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375566442973:subnet/subnet-067d4b60cd45a2f6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067d4b60cd45a2f6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "375566442973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0982c78768ec747ee"
          },
          "dependencies": [
            "aws_vpc.domain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "domain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375566442973:vpc/vpc-0982c78768ec747ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b23bcbfd03e503d6",
            "default_route_table_id": "rtb-015775415dbeae277",
            "default_security_group_id": "sg-011089b0f434db931",
            "dhcp_options_id": "dopt-08fdcf48004546ef4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0982c78768ec747ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-015775415dbeae277",
            "owner_id": "375566442973"
          }
        }
      ]
    }
  ]
}